程序代码自定义

--- a/views/categories.html
+++ b/views/categories.html
@@ -1,5 +1,5 @@
 {{template "header" .}}
-    <div class="sub-title">- {{ .Title }} -</div>
+    <div class="sub-title">更新分类</div>
     <div class="categories">
         {{range .Data}}
             <div class="categories-card">
