--- a/views/layouts/footer.html
+++ b/views/layouts/footer.html
@@ -1,11 +1,9 @@
 {{define "footer"}}
     </div>
     <div class="footer">
-        <span>{{ .Config.Icp }}</span><span class="footer-divider"> | </span>
-        <span>
-            © 2018 - 2019 {{ .Config.Author }}
-            Powered By  <a href="{{ .Config.AppRepository }}" target="_blank"> {{ .Config.AppName }} </a>
-        </span>
+        <span>{{ .Config.FootNote | unescapeHTML }}</span>
+        <span class="footer-divider"> | </span>
+        <span>Powered By <a href="{{ .Config.AppRepository }}" target="_blank"> {{ .Config.AppName }} </a></span>
     </div>
 </body>
 </html>
