--- a/views/article.html
+++ b/views/article.html
@@ -25,11 +25,46 @@
 <div id="article" class="article markdow">
 
 </div>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+<script src="/public/js/lib/marked.min.js"></script>
+<script src="/public/js/lib/prettify.min.js"></script>
 
-<script>
-    document.getElementById('article').innerHTML = marked({{  .Data.Body }});
+<script src="/public/js/lib/raphael.min.js"></script>
+<script src="/public/js/lib/underscore.min.js"></script>
+<script src="/public/js/lib/sequence-diagram.min.js"></script>
+<script src="/public/js/lib/flowchart.min.js"></script>
+<script src="/public/js/lib/jquery.flowchart.min.js"></script>
+
+<script src="/public/js/editormd.min.js"></script>
+<script type="text/javascript">
+    $(function() {
+        var testEditormdView, testEditormdView2;
+        
+        testEditormdView = editormd.markdownToHTML("article", {
+            markdown        : {{  .Data.Body }} ,//+ "\r\n" + $("#append-test").text(),
+            //htmlDecode      : true,       // 开启 HTML 标签解析，为了安全性，默认不开启
+            htmlDecode      : "style,script,iframe",  // you can filter tags decode
+            //toc             : false,
+            tocm            : true,    // Using [TOCM]
+            //tocContainer    : "#custom-toc-container", // 自定义 ToC 容器层
+            //gfm             : false,
+            //tocDropdown     : true,
+            // markdownSourceCode : true, // 是否保留 Markdown 源码，即是否删除保存源码的 Textarea 标签
+            emoji           : true,
+            taskList        : true,
+            tex             : true,  // 默认不解析
+            flowChart       : true,  // 默认不解析
+            sequenceDiagram : true,  // 默认不解析
+        });
+        
+        //console.log("返回一个 jQuery 实例 =>", testEditormdView);
+        
+        // 获取Markdown源码
+        //console.log(testEditormdView.getMarkdown());
+        
+        //alert(testEditormdView.getMarkdown());
+    });
 </script>
-<script src="/public/js/prism.js"></script>
 {{if ne .Config.UtterancesRepo ""}}
     <script src="https://utteranc.es/client.js"
             repo="{{ .Config.UtterancesRepo }}"
